feat: Product controller
